hw2 code minor error fixed

--- a/hw2/mnist_interval_analysis.ipynb
+++ b/hw2/mnist_interval_analysis.ipynb
@@ -10,25 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "id": "6bbda12e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Sequential(\n",
+       "Net(\n",
        "  (0): Normalize()\n",
-       "  (1): Net(\n",
-       "    (0): Normalize()\n",
-       "    (1): Linear(in_features=784, out_features=200, bias=True)\n",
-       "    (2): ReLU()\n",
-       "    (3): Linear(in_features=200, out_features=10, bias=True)\n",
-       "  )\n",
+       "  (1): Linear(in_features=784, out_features=200, bias=True)\n",
+       "  (2): ReLU()\n",
+       "  (3): Linear(in_features=200, out_features=10, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,8 +88,7 @@
     "class Net(nn.Sequential):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__(\n",
-    "            Normalize(), nn.Linear(28 * 28, 200), nn.ReLU(), nn.Linear(200, 10)\n",
-    "        )\n",
+    "            Normalize(), nn.Linear(28 * 28, 200), nn.ReLU(), nn.Linear(200, 10))\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = x.view((-1, 28 * 28))\n",
@@ -104,7 +100,7 @@
     "# Add the data normalization as a first \"layer\" to the network\n",
     "# this allows us to search for adverserial examples to the real image, rather than\n",
     "# to the normalized image\n",
-    "model = nn.Sequential(Normalize(), Net())\n",
+    "model = Net()\n",
     "\n",
     "model = model.to(device)\n",
     "model.train()"
@@ -112,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "id": "0a6282f7",
    "metadata": {},
    "outputs": [],
@@ -155,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "id": "72dd8bd6",
    "metadata": {},
    "outputs": [
@@ -163,17 +159,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10, Loss: 1.718\n",
-      "Epoch 2/10, Loss: 1.570\n",
-      "Epoch 3/10, Loss: 1.552\n",
-      "Epoch 4/10, Loss: 1.541\n",
-      "Epoch 5/10, Loss: 1.534\n",
-      "Epoch 6/10, Loss: 1.528\n",
-      "Epoch 7/10, Loss: 1.523\n",
-      "Epoch 8/10, Loss: 1.519\n",
-      "Epoch 9/10, Loss: 1.516\n",
-      "Epoch 10/10, Loss: 1.513\n",
-      "Accuracy on images: 95.11\n"
+      "Epoch 1/10, Loss: 2.012\n",
+      "Epoch 2/10, Loss: 1.729\n",
+      "Epoch 3/10, Loss: 1.627\n",
+      "Epoch 4/10, Loss: 1.596\n",
+      "Epoch 5/10, Loss: 1.582\n",
+      "Epoch 6/10, Loss: 1.572\n",
+      "Epoch 7/10, Loss: 1.566\n",
+      "Epoch 8/10, Loss: 1.561\n",
+      "Epoch 9/10, Loss: 1.557\n",
+      "Epoch 10/10, Loss: 1.553\n",
+      "Accuracy on images: 92.76\n"
      ]
     }
    ],
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "id": "d97f7f25",
    "metadata": {},
    "outputs": [
@@ -200,12 +196,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epsilon: 0.01, Robust Accuracy: 70.27%\n",
-      "Epsilon: 0.020000000000000004, Robust Accuracy: 15.34%\n",
-      "Epsilon: 0.030000000000000006, Robust Accuracy: 1.17%\n",
-      "Epsilon: 0.04000000000000001, Robust Accuracy: 0.02%\n",
-      "Epsilon: 0.05000000000000001, Robust Accuracy: 0.00%\n",
-      "Epsilon: 0.06000000000000001, Robust Accuracy: 0.00%\n",
+      "Epsilon: 0.01, Robust Accuracy: 78.38%\n",
+      "Epsilon: 0.020000000000000004, Robust Accuracy: 46.03%\n",
+      "Epsilon: 0.030000000000000006, Robust Accuracy: 18.99%\n",
+      "Epsilon: 0.04000000000000001, Robust Accuracy: 4.57%\n",
+      "Epsilon: 0.05000000000000001, Robust Accuracy: 0.69%\n",
+      "Epsilon: 0.06000000000000001, Robust Accuracy: 0.03%\n",
       "Epsilon: 0.07, Robust Accuracy: 0.00%\n",
       "Epsilon: 0.08, Robust Accuracy: 0.00%\n",
       "Epsilon: 0.09000000000000001, Robust Accuracy: 0.00%\n",
@@ -232,7 +228,6 @@
     "                box = HyperRectangle.from_eps(imgs.view(imgs.size(0), -1), e)\n",
     "                out = net.crown_ibp(box, alpha=True).concretize()\n",
     "                lo, hi = out.lower, out.upper\n",
-    "\n",
     "                labs = labels.cpu().numpy()\n",
     "                bad_mask = torch.ones_like(hi, dtype=torch.bool, device=hi.device)\n",
     "                for idx, lab in enumerate(labs):\n",
